--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> د/ رفيدة إبراهيم صالح </title>
-    <link rel="stylesheet" href="/css/css.css">
+    <link rel="stylesheet" href="page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="/images/logo.png" type="image/x-icon"> 
+    <link rel="icon" href="logo.ico">
+     
 </head>
 <body>
     <header>
@@ -36,7 +37,7 @@
             <h2>عن الدكتورة</h2>
             <div class="about-content">
                 <div class="profile">
-                    <img src="/images/Rofi.png" alt="دكتورة العلاج الطبيعي" class="profile-pic">
+                    <img src="Rofi.jpg" alt="دكتورة العلاج الطبيعي" class="profile-pic">
                     <div class="profile-info">
                         <h3>د/ رفيدة إبراهيم صالح</h3>
                         <p>دكتورة متخصصة في العلاج الطبيعي مع خبرة في إعادة التأهيل والعلاج بالحركة. حصلت على شهادتها من جامعة دراية وهي جامعة معترف بها عالميًا وحصلت علي تقدير عام امتياز مع مرتبة الشرف وتدربت على أحدث التقنيات العلاجية.</p>
@@ -90,7 +91,7 @@
             <h2>تواصل معنا</h2>
             <div class="contact-info">
                 <p>البريد الإلكتروني: Rofaida@gmail.com</p>
-                <p>رقم الهاتف: 01550995550</p>
+                <p>رقم الهاتف: 01550995550 </p>
                 <p>العنوان: أسيوط الجديدة - بيت العيلة الأول</p>
             </div>
         </div>
